--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -42,7 +42,7 @@
 
         <%# Search results %>
         <% unless national_product_index? %>
-          <div class="search-results drop-down" ng-show="suggestionsVisible">
+          <div class="search-results drop-down js-disabled-hide" ng-show="suggestionsVisible">
             <div class="search-results__inner">
               <dl class="search-results__list">
 
