--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -81,7 +81,7 @@
 			<%# //Centre select tabs (palm) %>
 
 			<%# Centre select (non-palm) %>
-			<nav class="header-centre-select-national hide-fully--palm-inline-block" role="navigation">
+			<nav class="header-centre-select-national hide-fully--palm-inline-block js-disabled-hide" role="navigation">
 				<h1>Choose a <span class="hide-visually">centre to see products, deals, events, and centre info:</span></h1>
 
         <div class="drop-down-menu drop-down-container">
