--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -13,7 +13,7 @@
     <div class="drop-down-menu drop-down-menu--target-width-center-align drop-down-container">
 
       <%# Centre selector trigger %>
-      <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer" toggle-visibility="no-products-nearby-centre">
+      <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer js-disabled-hide" toggle-visibility="no-products-nearby-centre">
         Westfield Centre
         <span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span>
       </button>
@@ -91,4 +91,3 @@
   </nav>
 <% end %>
 <%# //Pager %>
-
