--- a/app/views/styleguide/abstractions/_toggle_visibility.html.erb
+++ b/app/views/styleguide/abstractions/_toggle_visibility.html.erb
@@ -1,7 +1,6 @@
 <%= styleguide_block 'Toggle Visibility' do |style| %>
-<button toggle-visibility="toggle-text">Toggle</button>
-<div class="toggle-visibility" id="toggle-text">
-  <p>Here's some text that shows and hide.</p>
-</div>
-
+  <button class="btn btn--faux-link" toggle-visibility="toggle-visibility-1">Toggle</button>
+  <div class="toggle-visibility" id="toggle-visibility-1">
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
+  </div>
 <% end %>
