--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -87,7 +87,7 @@
 
 <%# Fine print %>
 <% if @deal.terms_and_conditions and !@deal.terms_and_conditions.empty? %>
-  <section class="island toggle-content js-toggle-content js-hide-show<% if @deal.stores and @deal.stores.size > 1 %> detail-view__divider detail-view__divider--top<% end %>" aria-labelledby="fine-print">
+  <section class="island toggle-visibility<% if @deal.stores and @deal.stores.size > 1 %> detail-view__divider detail-view__divider--top<% end %>" aria-labelledby="fine-print" id="fine-print-toggle">
     <h2 class="detail-view__hdr-sub hn" id="fine-print">The fine print</h2>
     <div class="detail-view__desc detail-view__desc--fine-print detail-view__subtle-txt">
       <% @deal.terms_and_conditions.each do |paragraph| %>
@@ -95,20 +95,15 @@
       <% end %>
     </div>
   </section>
+  <button type="button" class="btn btn--full btn--expand-collapse js-disabled-hide" toggle-visibility="fine-print-toggle">
+    <span class="show-when-visible show-when-visible--block">
+      Collapse the fine print
+      <span aria-hidden="true" class="icon icon--arrow-up-full icon--lrg"></span>
+    </span>
+    <span class="hide-when-visible">
+      Read the fine print
+      <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span>
+    </span>
+  </button>
 <% end %>
 <%# //Fine print %>
-
-<%- content_for :custom_javascript do -%>
-  <%# Run 'Toggle content' plugin %>
-  <%= javascript_include_tag 'jquery-extensions/jquery.toggle-content' %>
-
-  <script>
-    // Initialise 'Toggle content' plugin
-    $(function() {
-      $('.js-toggle-content').toggleContent({
-        btnTxtOpen: 'Read the fine print <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span>',
-        btnTxtClose: 'Collapse the fine print <span aria-hidden="true" class="icon icon--arrow-up-full icon--lrg"></span>'
-      });
-    });
-  </script>
-<%- end -%>
