--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -54,7 +54,7 @@
 
                 <div class="drop-down-menu drop-down-menu--target-width-center-align drop-down-container">
 
-                  <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="product-details-centre-selection-menu">
+                  <button type="button" class="drop-down-menu__trigger btn btn--full btn--full-left btn--main btn--main-dark btn--pointer btn--pointer-padding-med js-disabled-hide" toggle-visibility="product-details-centre-selection-menu">
                     Select Centre
                     <span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span>
                   </button>
