--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -326,17 +326,21 @@
           }
         }
 
-        /* Keyword filter textbox - need to increase specificity to override the dynamic `is-active` class that gets appended for toggle visibility Angular directive */
-        .stores-maps__filters .stores-maps__keyword-filter-input {
+        /* Keyword filter input */
+       .stores-maps__keyword-filter-input {
 
-          /* Display all filters on one line */
+          /* Always visible at this breakpoint */
           @include respond-min($iphone-landscape) {
-            display: inline-block;
-            width: 34%;
+            &,
+            /* Need to override dynamic `is-active` class appended by 'Angular toggle visibility' directive */
+            &.is-active {display: inline-block;}
+
+            width: 40%;
+            vertical-align: middle;
           }
 
           /* Reduce width to handle bigger map toggle button */
-          @include respond-min($lap-start) {
+          @include respond-range($lap-start, $ipad-portrait - 1) {
             width: 30%;
           }
 
@@ -345,8 +349,7 @@
             width: auto;
           }
 
-          /* When list and map view are separate and user is in map view
-             add padding to the right of the keyword filter so it does not cover the map controls */
+          /* When in map view add right padding so not to cover the map controls */
           .is-map-view & {
             @include to-rem(margin-right, $spacing-dbl+$spacing-quarter);
 
