--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -62,7 +62,7 @@
                       <span class="hide-visually">Public holiday</span>
                     </th>
                     <th scope="col" class="table-cell-padding-off">
-                      <span class="hide-visually">Time</span>
+                      <span class="hide-visually">Hours</span>
                     </th>
                   </tr>
                 </thead>
