--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -160,7 +160,7 @@
             <%# //Keyword Filter toggle %>
 
             <%# Keyword Filter %>
-            <div id="keyword-filter" class="stores-maps__filters__item stores-maps__keyword-filter-input toggle-visibility js-disabled-hide">
+            <div id="keyword-filter" class="stores-maps__keyword-filter-input toggle-visibility js-disabled-hide">
               <label for="keyword-filter-input" class="hide-visually">Filter stores by keyword</label>
               <input id="keyword-filter-input" type="search" placeholder="Enter store name&#8230;" class="txt-input js-stores-keyword-filter-input">
             </div>
