--- a/app/views/stores/_tiles.html.erb
+++ b/app/views/stores/_tiles.html.erb
@@ -1,7 +1,9 @@
-<div class="storefront__featured__item island-ends">
+<div class="storefront__featured island-ends">
   <div class="container">
-    <h2 class="storefront__featured__hdr"><%= heading %> from <%= store.name %></h2>
-    <ul class="grid grid--gutter-half grid--mrg-half">
+    <div class="txt-formatted">
+      <h2 class="mrg-half"><%= heading %> from <%= store.name %></h2>
+    </div>
+    <ul class="storefront__featured__tiles grid grid--gutter-half grid--mrg-half">
       <% results.each do |result| %>
         <li class="grid__item one-half non-palm-one-third">
           <%= render partial: "/shared/tiles/#{ kind }",
@@ -16,7 +18,7 @@
         </li>
       <% end %>
     </ul>
-    <%= link_to path, class: 'storefront__featured__view-more' do %>
+    <%= link_to path do %>
       View more<span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
     <% end %>
   </div>
